working grid of divs and hover, with some title and etc html elements

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-
+    <div id="page-container">
+        <h1 id="title">Etch a Sketch</h1>
+        <p class="author">by Max Watson</p>
+        <button id="choose-square">Choose # of Squares</button>
+        <div id="etch-container">
+        </div>
     </div>
 </body>
 </html>
