Finished Etch a sketch - draw, hover, erase, Etc
Fuck me dead I see the good and bad things with how these exercises are
laid out. Breaking things down into super small problems is fantastic
for actually figuring out how to code bit by bit as you edge towards
the solution, however having to refractor and change everything you
did and change all the functions is a pain and a half.
THAT BEING SAID - I learned a lot about how important a few different
things are:
- Micro-commits would have been good to do after each feature
- Writing out how my algorithm and how functions loop through
eachother in full pseudo code would have preventing having to really
get myself up to speed when I have to go back.
- More forethought before writing this all out would make it easier
to think through it all.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,6 +12,21 @@
         <h1 id="title">Etch a Sketch</h1>
         <p class="author">by Max Watson</p>
         <button id="choose-square">Choose # of Squares</button>
+        <div>
+            <span>
+                <button id="draw" value="draw">Draw</button>
+                <button id="hover" value="hover">Hover</button>
+                <button id="erase" value="erase">Erase All</button>
+            </span>
+        </div>
+        <div>
+            <span>
+                <button id="colourRandom" value="random">Colour: Random</button>
+                <button id="colourBlack" value="black">Colour: black</button>
+                <button id="colourRed" value=red>Colour: red</button>
+                <button id="colourBlue" value="blue">Colour: blue</button>
+            </span>
+        </div>
         <div id="etch-container">
         </div>
     </div>
